@@ -15,6 +15,8 @@
 * Find countries if they are differently cased [curiousepic]
 * CyberSource: Look up alpha2 country code [curiousepic]
 * MONEI: Update supported countries list [davidgf]
+* CitrusPay: Add gateway [duff]
+* TNS and CitrusPay: Update to version 36 of the API [duff]
 
 
 == Version 1.60.0 (July 4, 2016)
